@@ -2,6 +2,10 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   253: sluys, 22/10/2010
+     - Added formatting string literal for snprintf()
+     - Implicitly cast unsigned to signed integers
+     
    252: sluys, 22/10/2010
      - Fixed some issues:  removed unused variables, added headers, explicit type casting
      - Some compilers complain if x is defined but never used. Add x=x; at the *end* of the
